--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,35 @@
 // @import 'yoga-sass/assets/yoga';
 // @import 'normalize-css/normalize';
 
-// $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
+$fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
 @import 'font-awesome/scss/font-awesome';
 @import 'box-sizing';
+@import 'reset';
+
+
+.wrapper {
+      margin: 0;
+      max-width: 100%;
+}
+
+.banner {
+    padding: 0;
+    background: #428f8b no-repeat center center fixed;
+    background-size: cover;
+    margin: 0;
+    text-decoration: none;
+}
+
+.banner__arrow {
+      display: flex;
+      //font-size:
+}
+
+.banner__center {
+    position: relative;
+    margin: 4rem auto;
+    padding: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
