--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -8,13 +8,13 @@ ul {
   list-style: none;
 }
 .section {
-  margin: 0 auto;
-  padding: 1rem;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
   max-width: 65rem;
-  margin: 0 auto;
+  margin: 0;
   width: 100%;
 }
 
