--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -63,3 +63,9 @@ $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
   padding: 2rem;
 }
 }
+
+.icon {
+    font-size: 2rem;
+    padding-right: 1rem;
+    align-items: center;
+}
