--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -1,6 +1,6 @@
 
 body {
-  margin: 0;
+  margin: 0 auto;
 }
 
 ul {
@@ -8,13 +8,13 @@ ul {
   list-style: none;
 }
 .section {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
 .container {
   max-width: 65rem;
-  margin: 0;
+  margin: 0 auto;
   width: 100%;
 }
 
