--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,7 +2,7 @@
 // @import 'normalize-css/normalize';
 
 $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
-@import 'font-awesome/scss/font-awesome';
+@import 'font-awesome';
 @import 'box-sizing';
 @import 'reset';
 
